--- a/create-ec2.yaml
+++ b/create-ec2.yaml
@@ -62,3 +62,13 @@
           Owner: maggie
           #version number or jenkins number put here.  jenkins number or some ways to keep track of deployment.  do another ec2 gather facts.
           PurPose: provision ec2 then connect and do stuff
+    - name: see whats the file like.  i want to store the instances.id somewhere for later use.  
+    command: pwd
+
+    - name: Stop or terminate myserver instance
+      local_action:
+        module: ec2
+        region: "us-east-1"
+        instance_ids: "{{ item.id }}"
+        state: stopped
+      with_items: "{{ ec2.instances}}"
